first edit to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
 ---
-layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+layout: page
+title: Lohith Konathala
 ---
+
+<div style="text-align: center; margin-bottom: 40px;">
+  <img src="/assets/img/profile.jpg" alt="Lohith Konathala" style="border-radius: 50%; width: 200px; height: 200px; object-fit: cover;">
+</div>
+
+<h2>About Me</h2>
+<p>Write your bio here. Tell visitors about yourself, your background, and what you do.</p>
+
+<h2>Research Interests</h2>
+<ul>
+  <li>Research area 1</li>
+  <li>Research area 2</li>
+  <li>Research area 3</li>
+</ul>
+
+<h2>Selected Publications</h2>
+<p><strong>Paper Title 1</strong> (Year)<br>
+Authors list<br>
+<em>Conference/Journal Name</em><br>
+<a href="#">PDF</a> | <a href="#">Code</a></p>
+
+<h2>Open Source Contributions</h2>
+<p><strong>Project Name 1</strong><br>
+Brief description<br>
+<a href="https://github.com/username/project">GitHub</a></p>
