--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Lohith Konathala
 ---
 
 <div style="text-align: center; margin-bottom: 40px;">
-  <img src="/assets/img/profile.jpg" alt="Lohith Konathala" style="border-radius: 50%; width: 200px; height: 200px; object-fit: cover;">
+  <img src="/assets/img/profile_picture_1.JPEG" alt="Lohith Konathala" style="border-radius: 50%; width: 200px; height: 200px; object-fit: cover;">
 </div>
 
 <h2>About Me</h2>
