improve open-source section

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ Harry Julian, Rachel Beeson, Lohith Konathala, Johanna Ulin, Jiameng Gao<br>
 <h2>Open Source Contributions</h2>
 
 <p><strong>NeuTTS Air</strong><br>
-Speech-Language Model compression via embedding matrix pruning and multi-stage supervised fine-tuning. A lightweight, efficient text-to-speech model.<br>
-<a href="https://huggingface.co/neuphonic/neutts-air">HuggingFace</a></p>
+700M paramter Speech-Language Model for on-device TTS with instant voice cloning<br>
+<a href="https://huggingface.co/neuphonic/neutts-air">🤗 HuggingFace</a></p>
 
 <p><strong>NeuCodec</strong><br>
-Neural audio codec research implementation with Finite Scalar Quantization (FSQ) for transmission-robust audio compression.<br>
-<a href="https://huggingface.co/neuphonic/neucodec">HuggingFace</a></p>
+A lightweight neural codec using finite-scalar quantisation that encodes audio at 0.8 kbps<br>
+<a href="https://huggingface.co/neuphonic/neucodec">🤗 HuggingFace</a></p>
