--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Lohith Konathala
 <h2>About Me</h2>
 <p>I am a PhD student at Imperial College London researching Financial Machine Learning in the Intelligent Systems & Networks Group, supervised by Dr Giunchiglia. My research focuses on developing architecture-agnostic neurosymbolic layers for knowledge-constrained structured output prediction, with applications to asset allocation and ETF construction.</p>
 
-<p>Previously, I completed my BA and MEng in Information & Computer Engineering at the University of Cambridge with Distinction (Top 20%), and worked as a Machine Learning Researcher at Neuphonic, where I researched stability and robustness for Speech-Language Models.</p>
+<p>Previously, I completed my BA and MEng in Information & Computer Engineering at the University of Cambridge and worked as a Machine Learning Researcher at Neuphonic, where I researched stability and robustness for Speech-Language Models.</p>
 
 <h2>Research Interests</h2>
 <ul>
