--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Lohith Konathala
 
 <h2>Research Interests</h2>
 <ul>
-  <li>Neurosymbolic AI and knowledge-constrained prediction</li>
+  <li>Neurosymbolic Reasoning and knowledge-constrained prediction</li>
   <li>Financial machine learning and portfolio optimization</li>
 </ul>
 
@@ -41,11 +41,11 @@ Neuphonic, London, UK (Nov 2024 – Sep 2025)</p>
 
 <h2>Selected Publications</h2>
 
-<p><strong>Challenges of Direct Preference Optimisation in Speech-Language Models</strong> (Jun 2025)<br>
+<p><strong>Challenges of Direct Preference Optimisation in Speech-Language Models</strong><br>
 Lohith Konathala, Rachel Beeson, Jiameng Gao<br>
 <em>UK & Ireland Speech Workshop 2025</em></p>
 
-<p><strong>FSQ Enables Transmission-Robust Neural Audio Compression at Low Bit-Rates</strong> (Sep 2025)<br>
+<p><strong>FSQ Enables Transmission-Robust Neural Audio Compression at Low Bit-Rates</strong><br>
 Harry Julian, Rachel Beeson, Lohith Konathala, Johanna Ulin, Jiameng Gao<br>
 <em>arXiv 2509.09550, under review for ICASSP 2026</em></p>
 
