--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@ Relevant Courses: Deep Learning & Structured Data, Computational Statistics, Sta
 
 <p><strong>Machine Learning Researcher</strong><br>
 Neuphonic, London, UK (Nov 2024 – Sep 2025)</p>
-<ul>
-  <li>Researched stability and robustness for Speech-Language Models with experience implementing classifier-free guidance, model-merging and direct-preference optimisation (DPO). Presented research on DPO for Speech-Language Models at the UK & Ireland Speech Workshop, 2025.</li>
-  <li>Led research on Speech-Language Model compression via embedding matrix pruning and multi-stage supervised fine-tuning on proprietary data. Open-sourced on HuggingFace as NeuTTS Air.</li>
-  <li>Contributed to research on Finite Scalar Quantization (FSQ) Audio Codecs by co-supervising an interpretability study on acoustic and semantic feature representations, and analysing perturbation robustness of FSQ codes for channel-transmission (ICASSP 2026 submission).</li>
-</ul>
+Research on Speech-Language Models with a focus on stability, model compression, and neural audio codecs - work presented at academic conferences and open-sourced on HuggingFace.
 
 <h2>Selected Publications</h2>
 
