--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Relevant Courses: Deep Learning & Structured Data, Computational Statistics, Sta
 <h2>Experience</h2>
 
 <p><strong>Machine Learning Researcher</strong><br>
-Neuphonic, London, UK (Nov 2024 – Sep 2025)</p>
+Neuphonic, London, UK (Nov 2024 – Sep 2025)<br>
 Research on Speech-Language Models with a focus on stability, model compression, and neural audio codecs - work presented at academic conferences and open-sourced on HuggingFace.
 
 <h2>Selected Publications</h2>
